--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
 
-<iframe
+
+<iframe id="frame"
 src="https://rishi9440-remove-photo-background.hf.space"
 frameborder="0"
 width="100%"
@@ -16,5 +8,9 @@ height="100%"
 
 ></iframe>
 
-</body>
-</html>
+
+<style>
+#wrap { width: 600px; height: 390px; padding: 0; overflow: hidden; }
+#frame { width: 800px; height: 520px; border: 1px solid black; }
+#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; }
+</style>
