--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <iframe id="frame"
 src="https://rishi9440-remove-photo-background.hf.space"
 frameborder="0"
-width="100%"
+width="300px"
 height="100%"
 
 ></iframe>
 
 
-<style>
-#wrap { width: 600px; height: 390px; padding: 0; overflow: hidden; }
-#frame { width: 800px; height: 520px; border: 1px solid black; }
-#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; }
-</style>
