--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 
+	<style>
+		iframe{
+			zoom: -50%;
+		}
+	</style>
 
-<iframe id="frame"
-src="https://rishi9440-remove-photo-background.hf.space"
-frameborder="0"
-width="300px"
-height="100%"
-
+	<iframe
+	src="https://rishi9440-remove-photo-background.hf.space"
+	frameborder="0"
+	width="100%"
+	height="100%"
 ></iframe>
-
-
